--- a/assets/scss/organisms/pages/_addons.scss
+++ b/assets/scss/organisms/pages/_addons.scss
@@ -232,3 +232,178 @@
 	
 }
 
+.list-table-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0;
+	background-color:  var(--atum-table-bg);
+	border-bottom: 1px solid var(--gray-400);
+	border-radius: 8px;
+	padding-left: 10px;
+	
+	
+	@include tablet-max-wp {
+		flex-wrap: wrap;
+		justify-content: center;
+		margin-bottom: 15px;
+		border-bottom: none;
+	}
+	
+	@include mobile-max {
+		margin: 0 11px 15px;
+		
+		&.no-margin {
+			margin: 0 11px 15px;
+		}
+	}
+	
+	.nav-container-box {
+		flex-grow: 1;
+		position: relative;
+		overflow: hidden;
+	}
+	
+}
+
+.nav-with-scroll-effect {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-wrap: nowrap;
+	cursor: grab;
+	overflow-x: hidden;
+	overflow-y: visible;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
+	-webkit-overflow-scrolling: touch;
+	white-space: nowrap;
+	width: 100%;
+	float: left;
+	margin: 0 11px 0 0;
+	
+	&::-webkit-scrollbar {
+		display: none;
+	}
+	
+	.subsubsub {
+		margin: 0;
+	}
+	
+	&.dragging {
+		a {
+			pointer-events: none;
+		}
+	}
+	
+	.input-group {
+		position: static;
+	}
+	
+}
+
+.overflow-opacity-effect-right, .overflow-opacity-effect-left {
+	width: 100px;
+	position: absolute;
+	z-index: 998;
+	height: 49px;
+	pointer-events: none;
+	background-repeat: no-repeat;
+}
+
+.overflow-opacity-effect-right {
+	right: 0;
+	background-image: var(--overflow-opacity-rigth);
+}
+
+.overflow-opacity-effect-left {
+	display: none;
+	left: 0;
+	background-image: var(--overflow-opacity-left);
+}
+
+
+.subsubsub {
+	background-color:  var(--atum-table-bg);
+	width: 100%;
+	position: relative;
+	font-size: 16px;
+	letter-spacing: 0.4px;
+	font-weight: bold;
+	text-transform: capitalize;
+	display: flex;
+	align-items: center;
+	margin: 0;
+	
+	&.extend-list-table {
+		width: inherit;
+		margin: 10px 0 !important;
+		flex-wrap: nowrap;
+		justify-content: flex-start;
+		border-radius: 0;
+		border-bottom: 0;
+		
+		li {
+			margin-right: 15px;
+			color: var(--atum-table-views-tabs);
+			text-transform: uppercase;
+			padding: 0;
+			
+			span {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				margin-left: 3px;
+				border-radius: 5px;
+				line-height: 32px;
+				
+				&.active {
+					border-radius: 5px;
+					background-color: var(--primary);
+					font-size: 16px;
+					padding: 0 10px;
+					font-weight: bold;
+					letter-spacing: 0.4px;
+					color:  var(--atum-table-views-tabs-active-text);
+					
+					&:hover {
+						color:  var(--atum-table-views-tabs-active-text);
+					}
+					
+				}
+				
+				&:hover {
+					color: var(--primary);
+				}
+				
+			}
+			
+		}
+		
+		@include mobile-max {
+			
+			&:first-child {
+				
+				li {
+					
+					span, span:active {
+						margin-left: 0;
+					}
+				}
+			}
+		}
+	}
+	
+	@include tablet-max-wp{
+		margin: 10px 10px;
+		flex-wrap: wrap;
+		justify-content: center;
+		border-bottom: none;
+	}
+	
+	@include mobile-max{
+		justify-content: flex-start;
+	}
+	
+	
+}
+
