--- a/assets/scss/organisms/pages/_addons.scss
+++ b/assets/scss/organisms/pages/_addons.scss
@@ -256,10 +256,13 @@ html {
 				width: 144px;
 				margin-right: 10px;
 				text-transform: uppercase;
-				&.install {
+				
+				&.install-addon {
 					padding-left: .7rem;
 					padding-right: .7rem;
 					width: auto;
+					background-color: $success;
+					border-color: $success;
 				}
 			}
 			input {
@@ -332,13 +335,16 @@ html {
 		.alert {
 			display: block;
 		}
+		
 		.addon-footer .actions {
 			display: flex;
 			flex-direction: column;
+			
 			.btn {
 				width: 100%;
 				margin-bottom: .3rem;
 			}
+			
 			.addon-key > .wrapper {
 				flex-direction: column;
 				
