--- a/assets/css/atum-addons.css
+++ b/assets/css/atum-addons.css
@@ -2868,6 +2868,11 @@ html {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
+.atum-addons .atum-addon > .more-details:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
 .atum-addons .atum-addon > .more-details .label {
   position: absolute;
   top: 10px;
@@ -2936,6 +2941,8 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
 }
 .atum-addons .addon-header {
   display: -webkit-box;
@@ -3053,6 +3060,15 @@ html {
   background-color: #e9ecef;
   color: #27283B;
 }
+.atum-addons .no-results {
+  margin-top: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 1.2em;
+}
+.atum-addons .no-results i {
+  font-size: 1.3em;
+}
 @media all and (max-width: 782px) {
   .atum-addons .atum-addon {
     height: 300px;
@@ -3106,7 +3122,7 @@ html {
   -webkit-box-shadow: 0 4px 0 0 #e9ecef;
           box-shadow: 0 4px 0 0 #e9ecef;
   border-radius: 8px;
-  padding-left: 10px;
+  padding: 0 10px;
 }
 @media all and (max-width: 782px) {
   .list-table-header {
@@ -3133,6 +3149,31 @@ html {
           flex-grow: 1;
   position: relative;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.list-table-header .addons-search-wrapper:not(.is-searching):after {
+  content: "\e974";
+  font-family: "atum-icon-font";
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  color: #6c757d;
+}
+.list-table-header #addons-search {
+  border: 1px solid #dee2e6;
+  border-radius: 5px;
+  color: #6c757d;
+  font-size: 12px;
 }
 
 .nav-with-scroll-effect {
@@ -3238,6 +3279,8 @@ html {
   border-radius: 5px;
   line-height: 32px;
   cursor: pointer;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 .subsubsub.extend-list-table li span.active {
   border-radius: 5px;
