--- a/assets/scss/organisms/pages/_addons.scss
+++ b/assets/scss/organisms/pages/_addons.scss
@@ -144,6 +144,11 @@ html {
 				transform: scale(1.1);
 			}
 			
+			&:focus {
+				outline: none;
+				box-shadow: none;
+			}
+			
 			.label {
 				position: absolute;
 				top: 10px;
@@ -200,6 +205,7 @@ html {
 		padding: 15px 20px;
 		display: flex;
 		flex-direction: column;
+		flex-basis: 100%;
 	}
 	
 	.addon-header {
@@ -265,16 +271,20 @@ html {
 					border-color: $success;
 				}
 			}
+			
 			input {
 				font-size: .75rem;
 			}
+			
 			.cancel-action {
 				background-color: transparent;
 				width: 80px;
+				
 				&:hover {
 					background-color: buttonface;
 				}
 			}
+			
 		}
 		
 		.addon-key{
@@ -326,6 +336,17 @@ html {
 		
 	}
 	
+	.no-results {
+		margin-top: math.div($grid-gutter-width, 2);
+		padding-top: 20px;
+		padding-bottom: 20px;
+		font-size: 1.2em;
+		
+		i {
+			font-size: 1.3em;
+		}
+	}
+	
 	@include tablet-max-wp {
 		
 		.atum-addon {
@@ -374,7 +395,7 @@ html {
 	background-color:  var(--atum-table-bg);
 	box-shadow: 0 4px 0 0 $gray-200;
 	border-radius: 8px;
-	padding-left: 10px;
+	padding: 0 10px;
 	
 	
 	@include tablet-max-wp {
@@ -396,6 +417,30 @@ html {
 		flex-grow: 1;
 		position: relative;
 		overflow: hidden;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+	
+	.addons-search-wrapper {
+		&:not(.is-searching) {
+			&:after {
+				content: $atmi-magnifier;
+				font-family: $atum-icon-font;
+				position: absolute;
+				right: 10px;
+				top: 50%;
+				transform: translateY(-50%);
+				color: $gray-600;
+			}
+		}
+	}
+	
+	#addons-search {
+		border: 1px solid $gray-300;
+		border-radius: 5px;
+		color: $gray-600;
+		font-size: 12px;
 	}
 	
 }
@@ -490,6 +535,7 @@ html {
 				border-radius: 5px;
 				line-height: 32px;
 				cursor: pointer;
+				transition: .2s ease-in-out;
 				
 				&.active {
 					border-radius: 5px;
