--- a/assets/scss/organisms/pages/_settings.scss
+++ b/assets/scss/organisms/pages/_settings.scss
@@ -949,6 +949,10 @@
 					margin-right: 15px;
 				}
 				
+				&.template-reset .tool-runner {
+					width: 140px;
+				}
+				
 			}
 			
 			.select2-container {
