--- a/assets/css/atum-addons.css
+++ b/assets/css/atum-addons.css
@@ -1,6 +1,6 @@
 /** 
  * ATUM Inventory Management for WooCommerce CSS 
- * @version 1.9.26.2 
+ * @version 1.9.27 
  * @author Be Rebel  
  *
  * Author URI: https://berebel.io 
@@ -2316,7 +2316,15 @@ input[type=button].btn-block {
   color: var(--gray-800);
 }
 .swal2-container .swal2-modal .swal2-validation-message {
-  margin: 0.625em -1.25rem -0.625em;
+  margin: 1.625em -1.25rem -1.625em;
+  font-size: 14px;
+  text-align: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 .swal2-container .swal2-modal p {
   font-size: 15px;
@@ -2730,6 +2738,12 @@ html {
 #wpbody-content {
   padding-bottom: 0;
 }
+#wpbody-content > .notice {
+  margin-left: 0;
+}
+#wpbody-content > .notice ~ .atum-addons {
+  margin-top: 10px;
+}
 
 .atum-addons {
   margin-bottom: 60px;
@@ -2743,7 +2757,7 @@ html {
 .atum-addons__header {
   position: relative;
   height: 300px;
-  background: var(--blue-light) url("../images/dashboard/header-bg.png") center bottom;
+  background: #dbf9ff url("../images/dashboard/header-bg.png") center bottom;
   background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2771,7 +2785,7 @@ html {
   width: 100%;
 }
 .atum-addons__header h3 {
-  color: var(--main-title);
+  color: #27283B;
   width: 734px;
   max-width: 90%;
   margin: auto;
@@ -2814,15 +2828,15 @@ html {
   padding-left: 15px;
   padding-bottom: 5px;
   font-size: 11px;
-  color: var(--main-title);
+  color: #27283B;
   font-weight: 300;
 }
 .atum-addons__header-notice span {
-  color: var(--primary);
+  color: #00B8DB;
   margin-right: 5px;
 }
 .atum-addons__header-notice .wc-rating-link {
-  color: var(--primary);
+  color: #00B8DB;
 }
 @media all and (max-width: 768px) {
   .atum-addons__header-notice {
@@ -2837,7 +2851,7 @@ html {
 }
 .atum-addons .atum-addon {
   margin-top: 20px;
-  background-color: var(--dash-card-bg);
+  background-color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2862,6 +2876,11 @@ html {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
+.atum-addons .atum-addon > .more-details:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
 .atum-addons .atum-addon > .more-details .label {
   position: absolute;
   top: 10px;
@@ -2885,6 +2904,9 @@ html {
 }
 .atum-addons .atum-addon > .more-details .label.inactive, .atum-addons .atum-addon > .more-details .label.invalid, .atum-addons .atum-addon > .more-details .label.disabled, .atum-addons .atum-addon > .more-details .label.expired, .atum-addons .atum-addon > .more-details .label.no-key {
   background: #ff4848;
+}
+.atum-addons .atum-addon > .more-details .label.trial {
+  background: #BA7DF7;
 }
 .atum-addons .atum-addon .atum-loading {
   right: 152px;
@@ -2927,6 +2949,8 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
 }
 .atum-addons .addon-header {
   display: -webkit-box;
@@ -2940,7 +2964,7 @@ html {
 }
 .atum-addons .addon-header h2 {
   font-size: 18px;
-  color: var(--bm_text_color);
+  color: #495057;
   margin: 0;
 }
 .atum-addons .addon-header .label {
@@ -2967,7 +2991,7 @@ html {
       -ms-flex-positive: 1;
           flex-grow: 1;
   font-size: 15px;
-  color: var(--bm_text_color);
+  color: #6c757d;
 }
 .atum-addons .alert {
   font-size: 12px;
@@ -2981,10 +3005,12 @@ html {
   margin-right: 10px;
   text-transform: uppercase;
 }
-.atum-addons .addon-footer .actions .btn.install {
+.atum-addons .addon-footer .actions .btn.install-addon {
   padding-left: 0.7rem;
   padding-right: 0.7rem;
   width: auto;
+  background-color: #69C61D;
+  border-color: #69C61D;
 }
 .atum-addons .addon-footer .actions input {
   font-size: 0.75rem;
@@ -3027,12 +3053,32 @@ html {
   font-weight: 600;
 }
 .atum-addons .addon-footer .license-info .license-key, .atum-addons .addon-footer .license-info .expires {
-  background-color: var(--atum-table-bg2);
+  background-color: #e9ecef;
   font-size: 13px;
   font-weight: 400;
   line-height: 1.47;
   padding: 4px 13px;
   border-radius: 5px;
+}
+.atum-addons .addon-footer .license-info .expires.expired {
+  color: #ff4848;
+}
+.atum-addons .addon-footer .alert {
+  margin-bottom: 10px;
+}
+.atum-addons .addon-footer .alert-warning {
+  border-color: #e9ecef;
+  background-color: #e9ecef;
+  color: #27283B;
+}
+.atum-addons .no-results {
+  margin-top: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 1.2em;
+}
+.atum-addons .no-results i {
+  font-size: 1.3em;
 }
 @media all and (max-width: 782px) {
   .atum-addons .atum-addon {
@@ -3083,11 +3129,11 @@ html {
       -ms-flex-align: center;
           align-items: center;
   margin: 0;
-  background-color: var(--atum-table-bg);
+  background-color: #fff;
   -webkit-box-shadow: 0 4px 0 0 #e9ecef;
           box-shadow: 0 4px 0 0 #e9ecef;
   border-radius: 8px;
-  padding-left: 10px;
+  padding: 0 10px;
 }
 @media all and (max-width: 782px) {
   .list-table-header {
@@ -3114,6 +3160,31 @@ html {
           flex-grow: 1;
   position: relative;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.list-table-header .addons-search-wrapper:not(.is-searching):after {
+  content: "\e974";
+  font-family: "atum-icon-font";
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  color: #6c757d;
+}
+.list-table-header #addons-search {
+  border: 1px solid #dee2e6;
+  border-radius: 5px;
+  color: #6c757d;
+  font-size: 12px;
 }
 
 .nav-with-scroll-effect {
@@ -3173,7 +3244,6 @@ html {
 }
 
 .subsubsub {
-  background-color: var(--atum-table-bg);
   width: 100%;
   position: relative;
   font-size: 16px;
@@ -3201,7 +3271,7 @@ html {
 }
 .subsubsub.extend-list-table li {
   margin-right: 15px;
-  color: var(--atum-table-views-tabs);
+  color: #6c757d;
   text-transform: uppercase;
   padding: 0;
 }
@@ -3219,22 +3289,24 @@ html {
   border-radius: 5px;
   line-height: 32px;
   cursor: pointer;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 .subsubsub.extend-list-table li span.active {
   border-radius: 5px;
-  background-color: var(--primary);
+  background-color: #00B8DB;
   font-size: 16px;
   padding: 0 10px;
   font-weight: bold;
   letter-spacing: 0.4px;
-  color: var(--atum-table-views-tabs-active-text);
+  color: #fff;
   cursor: default;
 }
 .subsubsub.extend-list-table li span.active:hover {
-  color: var(--atum-table-views-tabs-active-text);
+  color: #fff;
 }
 .subsubsub.extend-list-table li span:hover {
-  color: var(--primary);
+  color: #00B8DB;
 }
 @media all and (max-width: 480px) {
   .subsubsub.extend-list-table:first-child li span, .subsubsub.extend-list-table:first-child li span:active {
