--- a/assets/css/atum-dashboard.css
+++ b/assets/css/atum-dashboard.css
@@ -1284,6 +1284,10 @@
   content: "\e990";
 }
 
+.atmi-question:before {
+  content: "\e9d9";
+}
+
 .atmi-question-circle:before {
   content: "\e991";
 }
