--- a/assets/css/atum-icons.css
+++ b/assets/css/atum-icons.css
@@ -722,6 +722,10 @@
   content: "\e990";
 }
 
+.atmi-question:before {
+  content: "\e9d9";
+}
+
 .atmi-question-circle:before {
   content: "\e991";
 }
