--- a/assets/css/atum-marketing-popup.css
+++ b/assets/css/atum-marketing-popup.css
@@ -1609,6 +1609,10 @@ input[type=button].btn-block {
   content: "\e990";
 }
 
+.atmi-question:before {
+  content: "\e9d9";
+}
+
 .atmi-question-circle:before {
   content: "\e991";
 }
