--- a/assets/scss/organisms/pages/_addons.scss
+++ b/assets/scss/organisms/pages/_addons.scss
@@ -333,6 +333,10 @@ html {
 			border-color: $gray-200;
 			background-color: $gray-200;
 			color: $blue-dark;
+			
+			a {
+				color: $primary;
+			}
 		}
 		
 	}
