--- a/assets/scss/atoms/_help-guides.scss
+++ b/assets/scss/atoms/_help-guides.scss
@@ -561,3 +561,11 @@ tr.introjs-showElement {
 	position: relative;
 	display: inherit;
 }
+
+td .akb-wrapper {
+	display: inline;
+}
+
+.introjs-tooltip .introjs-bullets {
+	display: none;
+}
