--- a/assets/scss/atum-addons.scss
+++ b/assets/scss/atum-addons.scss
@@ -12,8 +12,9 @@
 @import "atoms/atum-icons";
 @import "atoms/tooltip";
 
-@import "molecules/sweet-alert";
 @import "molecules/alert";
+@import "molecules/block-ui";
+@import "molecules/sweet-alert";
 @import "molecules/atum-footer";
 
 @import "organisms/pages/addons";
