--- a/assets/scss/organisms/pages/_addons.scss
+++ b/assets/scss/organisms/pages/_addons.scss
@@ -327,6 +327,13 @@ html {
 		
 		.alert {
 			margin-bottom: 10px;
+			
+			a {
+				&:focus {
+					outline: none;
+					box-shadow: none;
+				}
+			}
 		}
 		
 		.alert-warning {
