--- a/assets/scss/organisms/pages/_settings.scss
+++ b/assets/scss/organisms/pages/_settings.scss
@@ -32,6 +32,12 @@
 		@include mobile-max{
 			flex-wrap: wrap;
 		}
+		
+		> .alert {
+			width: 100%;
+			height: 26px;
+			margin-left: 10px;
+		}
 
 	}
 
