Fixed large product names in PO PDF template

--- a/assets/css/atum-po-export.css
+++ b/assets/css/atum-po-export.css
@@ -429,6 +429,7 @@ body {
 }
 .content-lines .description {
   text-align: left;
+  white-space: unset !important;
 }
 .content-lines .qty {
   text-align: center;
