--- a/assets/scss/molecules/_marketing-popup.scss
+++ b/assets/scss/molecules/_marketing-popup.scss
@@ -25,6 +25,7 @@
 				font-size: 40px;
 				margin: -3px 0 10px;
 				letter-spacing: 1px;
+				line-height: 1;
 				
 				> span {
 					position: relative;
